--- a/.github/workflows/ejercicio2_node-test.yml
+++ b/.github/workflows/ejercicio2_node-test.yml
@@ -1,38 +1,34 @@
-name: Ejercicio 2 - Node.js CI
+name: Ejercicio 2 
 
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
+on: [push]
 
 jobs:
-  build-and-test:
+  test-node:
     runs-on: ubuntu-latest
-    
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
     
     steps:
     - uses: actions/checkout@v3
     
-    - name: Usar Node.js ${{ matrix.node-version }}
+    - name: Setup Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: '18.x'
     
-    - name: Instalar dependencias
-      run: npm ci
+    - name: Configurar proyecto básico
+      run: |
+        # Crear package.json si no existe
+        if [ ! -f "package.json" ]; then
+          npm init -y
+        fi
+        
+        # Crear archivo JavaScript
+        echo "console.log('✅ Node.js funcionando en GitHub Actions');" > app.js
+        
+        # Crear test simple
+        echo "console.log('🧪 Test ejecutado exitosamente');" > test.js
+    
+    - name: Ejecutar aplicación
+      run: node app.js
     
     - name: Ejecutar tests
-      run: |
-        # Creamos un test básico si no existe
-        if [ ! -f "test.js" ]; then
-          echo "const assert = require('assert');" > test.js
-          echo "console.log('✓ Tests básicos pasaron');" >> test.js
-        fi
-        node test.js
-    
-    - name: Verificar build
-      run: node index.js
+      run: node test.js
